--- a/.travis.yml
+++ b/.travis.yml
@@ -21,29 +21,30 @@ before_install:
   - mkdir tmp
   - .travis/gen-ssl.sh mariadb.example.com tmp
   - export SSLCERT=$PROJ_PATH/tmp
+  - CODECOV_TOKEN='873eb8a5-f9f5-44e7-a13d-fcb2df76aedf'
 matrix:
   allow_failures:
 #    - env: SERVER_BRANCH=10.5
 #    - env: SERVER_BRANCH=10.5 TEST_OPTION=--ps-protocol
   include:
-    - env: DB=build:10.6
-    - env: SKYSQL=true
-    - env: SKYSQL_HA=true MAXSCALE_TEST_DISABLE=true
+#    - env: DB=build:10.6
+#    - env: SKYSQL=true
+#    - env: SKYSQL_HA=true MAXSCALE_TEST_DISABLE=true
 # disable for now    - env: DB=mysql:8.0
-    - env: DB=mariadb:10.1
-    - env: DB=mariadb:10.2
-    - env: DB=mariadb:10.3
-    - env: DB=mariadb:10.4
+#    - env: DB=mariadb:10.1
+#    - env: DB=mariadb:10.2
+#    - env: DB=mariadb:10.3
+#    - env: DB=mariadb:10.4
     - env: DB=mariadb:10.5
-    - env: DB=mariadb:10.5 MAXSCALE_VERSION=2.5.3 MAXSCALE_TEST_DISABLE=true
-    - env: SERVER_BRANCH=10.2
-    - env: SERVER_BRANCH=10.2 TEST_OPTION=--ps-protocol
-    - env: SERVER_BRANCH=10.3
-    - env: SERVER_BRANCH=10.3 TEST_OPTION=--ps-protocol
-    - env: SERVER_BRANCH=10.4
-    - env: SERVER_BRANCH=10.4 TEST_OPTION=--ps-protocol
-    - env: SERVER_BRANCH=10.5
-    - env: SERVER_BRANCH=10.5 TEST_OPTION=--ps-protocol
+#    - env: DB=mariadb:10.5 MAXSCALE_VERSION=2.5.3 MAXSCALE_TEST_DISABLE=true
+#    - env: SERVER_BRANCH=10.2
+#    - env: SERVER_BRANCH=10.2 TEST_OPTION=--ps-protocol
+#    - env: SERVER_BRANCH=10.3
+#    - env: SERVER_BRANCH=10.3 TEST_OPTION=--ps-protocol
+#    - env: SERVER_BRANCH=10.4
+#    - env: SERVER_BRANCH=10.4 TEST_OPTION=--ps-protocol
+#    - env: SERVER_BRANCH=10.5
+#    - env: SERVER_BRANCH=10.5 TEST_OPTION=--ps-protocol
 
 script:
   - if [[ "$DB" == build* ]] ; then .travis/build/build.sh; fi
@@ -51,3 +52,5 @@ script:
   - if [ -z "$DB" ] && [ -z "$SKYSQL" ] && [ -z "$SKYSQL_HA" ] ; then .travis/server-replace-submodule.sh; fi
   - if [ -n "$DB" ] || [ -n "$SKYSQL" ] || [ -n "$SKYSQL_HA" ]; then .travis/script.sh; fi
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
