--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,8 @@ before_install:
   - .travis/gen-ssl.sh mariadb.example.com tmp
   - export SSLCERT=$PROJ_PATH/tmp
   - CODECOV_TOKEN='873eb8a5-f9f5-44e7-a13d-fcb2df76aedf'
+  - apt install gcov
+
 matrix:
   allow_failures:
 #    - env: SERVER_BRANCH=10.5
