--- a/unittest/libmariadb/CMakeLists.txt
+++ b/unittest/libmariadb/CMakeLists.txt
@@ -19,6 +19,17 @@ ENDIF()
 
 ENABLE_TESTING()
 
+INCLUDE(${CC_SOURCE_DIR}/cmake/CodeCoverage.cmake)
+append_coverage_compiler_flags()
+setup_target_for_coverage(cc_coverage ctest coverage)
+SETUP_TARGET_FOR_COVERAGE_LCOV(
+      NAME coverage
+      EXECUTABLE ctest
+      DEPENDENCIES *)
+setup_target_for_coverage_gcovr_html(
+   NAME coverage
+   EXECUTABLE ctest
+   BASE_DIRECTORY "${CC_SOURCE_DIR}/unittest")
 
 INCLUDE_DIRECTORIES(${CC_SOURCE_DIR}/include
                     ${CC_BINARY_DIR}/include
