--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo: true
+dist: focal
 language: c
 cache:
   apt: true
@@ -23,7 +23,8 @@ before_install:
   - export SSLCERT=$PROJ_PATH/tmp
   - CODECOV_TOKEN='873eb8a5-f9f5-44e7-a13d-fcb2df76aedf'
   - sudo apt install lcov
-matrix:
+
+jobs:
   allow_failures:
 #    - env: SERVER_BRANCH=10.5
 #    - env: SERVER_BRANCH=10.5 TEST_OPTION=--ps-protocol
