--- a/.travis.yml
+++ b/.travis.yml
@@ -22,9 +22,10 @@ before_install:
   - .travis/gen-ssl.sh mariadb.example.com tmp
   - export SSLCERT=$PROJ_PATH/tmp
   - CODECOV_TOKEN='873eb8a5-f9f5-44e7-a13d-fcb2df76aedf'
-  - sudo add-apt-repository universe multiverse
   - sudo apt update
   - sudo apt install lcov
+  - gcov --version
+  - gcc -v
 
 jobs:
   allow_failures:
