--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,7 +118,7 @@ IF(MSVC)
     ENDFOREACH()
   ENDIF()
 ENDIF()
-ENDIF(NOT IS_SUBPROJECT)
+ENDIF(NOT IS_SUBPROJECT)CMAKE_C_FLAGS
 
 # Disable dbug information for release builds
 SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -DDBUG_OFF")
