--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -243,7 +243,7 @@ ENDIF()
 
 ADD_DEFINITIONS(-DMARIADB_SYSTEM_TYPE="${CMAKE_SYSTEM_NAME}")
 ADD_DEFINITIONS(-DMARIADB_MACHINE_TYPE="${CMAKE_SYSTEM_PROCESSOR}")
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs --coverage -fprofile-instr-generate -fcoverage-mapping -g -O0")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fprofile-arcs -g -O0")
 IF(WIN32)
   SET(HAVE_THREADS 1)
   ADD_DEFINITIONS(-DHAVE_DLOPEN)
